feat: Refactor HeadingElement Component logic.
1. It now uses a Html Input Elements instead of contenteditable.: It seems like there is no use of contenteditable element for now and it was adding extra overhead logic to manage states.

2. Wrote handleClickOutside function: for HeadingElement and also the clean up function to update the previously selected element.

3. Used extra refs:  to have the fresh states inside the clean up function. It was having old state state from the time when loaded first that's why used extra refs for the states.

4. Had to write separate effects for isSelected and [headingTextState, subHeadingTextState]  because it was overlapping and due to this updateElement was being called infinitely when typing.

5. todo: Refactor

--- a/src/components/elements/HeadingElement/styles.css
+++ b/src/components/elements/HeadingElement/styles.css
@@ -1,9 +1,31 @@
 .element {
   padding: 0.5rem 0.75rem;
+  color: var(--dark);
 }
 
 .heading-element {
+  input[type="text"] {
+    border: none;
+    background-color: transparent;
+    outline: none;
+    color: inherit;
+  }
+
   .heading-element__heading {
     margin: 0.5rem 0;
+
+    input[type="text"] {
+      font-size: 1.5rem;
+      font-weight: 700;
+    }
+  }
+
+  .heading-element__subheading {
+    margin: 0.5rem 0;
+
+    input[type="text"] {
+      font-size: 1rem;
+      font-weight: 400;
+    }
   }
 }
